--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="theme-color" media="(prefers-color-scheme: light)" content="#f9fafb">
   <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#000">
   
-  <title>Hexo</title>
+  <title>BiteByte</title>
 
   
     <meta property="og:type" content="website">
